--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ionic/angular": "^6.2.9",
-    "angular-iban": "^14.0.0",
+    "angular-iban": "6",
     "iban": "^0.0.14",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
